--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.6
   flutter_circle_color_picker: ^0.3.0
   flutter_blue: ^0.8.0
+  flutter_bluetooth_serial: ^0.4.0
+  permission_handler: ^11.0.1
 
 dev_dependencies:
   flutter_test:
