--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   flutter_blue: ^0.8.0
   flutter_bluetooth_serial: ^0.4.0
   permission_handler: ^11.0.1
+  provider: ^6.0.3
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   flutter_test:
